<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="270dp"
    tools:context=".TankSampleFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/editFuelVolume"
        android:padding="0dp"
        android:text="@string/fvol_nliters"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swRecalc" />

    <EditText
        android:id="@+id/editFuelVolume"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/fuel_volume_l"
        android:inputType="numberDecimal"
        android:maxLength="9"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editTotalLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:ems="10"
        android:hint="@string/liquid_level"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/editTotalLevel"
        android:padding="0dp"
        android:text="@string/total_lvl_nmm"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editFuelVolume"
        app:layout_constraintStart_toEndOf="@+id/editFuelVolume"
        app:layout_constraintTop_toTopOf="@+id/editFuelVolume" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/editWaterVolume"
        android:padding="0dp"
        android:text="@string/wvol_nliters"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/editWaterLevel"
        android:padding="0dp"
        android:text="@string/wlvl_nmm"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editWaterVolume"
        app:layout_constraintStart_toEndOf="@+id/editWaterVolume"
        app:layout_constraintTop_toTopOf="@+id/editWaterVolume" />

    <EditText
        android:id="@+id/editWaterLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/waterColor"
        android:ems="10"
        android:hint="@string/water_level"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editWaterVolume"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/waterColor"
        android:ems="10"
        android:hint="@string/water_volume"
        android:inputType="numberDecimal"
        android:maxLength="9"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:targetApi="o" />

    <Switch
        android:id="@+id/swRecalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:text="@string/auto_recalc_related_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@+id/editDensity"
        android:padding="0dp"
        android:text="@string/density_ng_m"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editDensity"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:ems="10"
        android:hint="@string/fuel_density"
        android:inputType="number"
        android:maxLength="6"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@+id/editFuelMass"
        android:padding="0dp"
        android:text="@string/mass_nkg"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editDensity"
        app:layout_constraintStart_toEndOf="@+id/editDensity"
        app:layout_constraintTop_toTopOf="@+id/editDensity" />

    <EditText
        android:id="@+id/editFuelMass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:ems="10"
        android:hint="@string/fuel_mass"
        android:inputType="number|numberDecimal"
        android:maxLength="9"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editTcFuelDens"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:ems="10"
        android:hint="@string/tc_density"
        android:inputType="number"
        android:maxLength="6"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@+id/editFuelMass"
        android:padding="0dp"
        android:text="@string/tcdens_ng_m"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTemp"
        app:layout_constraintStart_toEndOf="@+id/editDensity"
        app:layout_constraintTop_toTopOf="@+id/editTemp" />

    <EditText
        android:id="@+id/editTemp"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:ems="10"
        android:hint="@string/fuel_temp"
        android:inputType="number|numberDecimal"
        android:maxLength="5"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editDensity"
        android:padding="0dp"
        android:text="@string/t_c"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@+id/editDensity"
        android:padding="0dp"
        android:text="@string/tcvol_nliters"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTcFuelVolume"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@color/FuelColor"
        android:ems="10"
        android:hint="@string/tc_volume"
        android:inputType="number|numberDecimal"
        android:maxLength="9"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:targetApi="o" />

</android.support.constraint.ConstraintLayout>
