<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TankEditorActivity">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:onClick="saveButtonClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/myTankView"
        app:layout_constraintEnd_toStartOf="@+id/myTankView"
        app:layout_constraintTop_toTopOf="@+id/myTankView" />

    <com.google.dmzavr.MyTankView
        android:id="@+id/myTankView"
        android:layout_width="166dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/myTankView">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/waterColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TabItem
                android:id="@+id/tankCfgTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tank_cfg" />

            <android.support.design.widget.TabItem
                android:id="@+id/tankSampleTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample" />

        </android.support.design.widget.TabLayout>
    </android.support.v4.view.ViewPager>

</android.support.constraint.ConstraintLayout>